    * fix circular reference (alias for self.method increment refcount)
    * Request.logger is deprecated now
    * send_json request function
    * new pop_route, pop_rroute, pop_http_state and pop_default methods
    * fix log_error in Application and Request to convert unicode to
      utf-8 string in python2.x
    * is_route and is_rroute methods
    * X-Forwarded-* headers support

==== 1.5.2 ====
    * Info about unstable branch

==== 1.5.1 ====
    * append missing cmp function when python3 is use
    * errors must be flushed
    * Broken client connection detection
    * move documentation to separate README.rst
    * moved to GitHub (fix links)

==== 1.5.0 ====
    * http response 304 Not Modified supported
    * new req.uri_hadler property
    * set req.uri_hadler and req.uri_rule before calling pre handlers, but after
      end point handler is known
    * new get_options and log_error methods of Application object
    * pre process handlers are run for http status handlers if not run yet
    * not implement error got http status code
    * bad request error page and error log on not implement method

==== 1.4.2 ====
    * bug fix when setting req.clength

==== 1.4.1 ====
    * append Secret Key about info to debug-info page
    * fix ini config examples - documentation can't be on same line as variable
    * fix menu links (diskusion and Facebook to PyPI)

==== 1.4.0 ====
    * fix version style to major.minor.maintenance

==== 1.0.4 ====
    * is_xhr bug fix
    * json POST|PUT|Patch request parsing
    * documentation fix
    * Request cookies and Session rewrite
    * html clear output in error traceback
    * included results have meta content tag
    * Reimplementation of Headers class (Python 3.4 support)

==== 1.0.3 ====
    * installation documentation fix
    * /debug-info handlers are separete
    * send_file result in main __init__.py

==== 1.0.2 ====
    * auto striping option keys and values
    * HTTP_FORBIDDEN bug fix (missing const)